sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: value i
	i=0;
        ^AlgCombSort:8: error: not found: value i
	while((i+gap)<getValueCount()){
               ^AlgCombSort:10: error: not found: value i
		if(isSmaller(i+1,i)){
                             ^AlgCombSort:11: error: not found: value i
			swap(i,i+1);
                             ^AlgCombSort:14: error: not found: value i
		i++;	
                ^