sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var gap:Double = getValueCount();
	var swapped:Boolean=true;
	while(gap>1 || swapped==true){
	if(gap>1) gap=gap/1.3;
	i=0;
	while((i+gap)<getValueCount()){
		swapped=false;
		if(isSmaller(i+1,i)){
			swap(i,i+1);
			swapped=true;
		}
		i++;	
	}
	}
}
